--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="catalog.html">Каталог товаров</a>
             <a href="about.html">О нас</a>
             <a href="contact.html">Контакты</a>
+            <a href="cart.html">Корзина</a>
         </nav>
     </header>
     <main>
